--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "lodash": "^4.17.4",
+    "moment": "^2.24.0",
     "react": "^16.2.0",
+    "react-datepicker": "^2.7.0",
+    "react-dates": "^20.2.5",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.3.1",
